--- a/tvos/DEBIAN/control
+++ b/tvos/DEBIAN/control
@@ -1,7 +1,7 @@
 Package: libjb
 Name: libjb
 Version: 1.0
-Architecture: iphoneos-arm
+Architecture: appletvos-arm64
 Description: Library that shares the current prefix path for rootless jailbreaks 
 Maintainer: Kevin Bradley
 Author: Kevin Bradley
